# gdb-call-lambda

./: README.md  setup.cfg
gdb_call_lambda/: __init__.py
test/: a.cpp  test.py  test.sh
