[metadata]
name = gdb_call_lambda
version = 0.0.1
author = user202729
description = Call C++ lambda functions from gdb
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)

[options]
zip_safe = True
packages = gdb_call_lambda/

